k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: backend-namespace
spec:
  selector:
    app: backend-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
